@@ -1,4 +1,4 @@
 set ( PROJECT_VERSION_MAJOR "2" )
 set ( PROJECT_VERSION_MINOR "3" )
-set ( PROJECT_VERSION_PATCH "0-alpha4" )
+set ( PROJECT_VERSION_PATCH "0-alpha5" )
 set ( PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}" )
